Completed GST input level 1

--- a/Prints/MainForm.resx
+++ b/Prints/MainForm.resx
@@ -117,29 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="gstInputBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>332, 21</value>
+  </metadata>
   <metadata name="printListItemBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>129, 17</value>
+    <value>133, 21</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="tsbPrint.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOBSURBVFhHtZdbTxNBFMf7AXzSTyH67qMPGKSgEREUWw0m
-        PJgQExMejOUaVCCEKGpJbQsasS0QjKA2IJdIKATkYgs0DXIRELyBxUogmiKl45zpLOy0s+0uxX/yS7O7
-        c85/OjtzZlYlV7WejINGlzbb9F5Tj38nzC7tGgZR1uAefZYNbWlY/DKPZR0xuTQW85DWLzKMDm5LYnAs
-        TaNcNZ7MA2aXRl/i0ga4JjIIxWr0kIumlada5+XDJmfWFC/pXoBckJOmjy7j6KVj5hGtj5coLnBOyE1t
-        +IJe/hdzAZxbciTgPe3nsEsBHtw5AZOFFyDm+eQNZJ+5E5UmTx43lkWjp7YhwXKRM9u/rk+iWHItdKPq
-        3gxuvADxEi9Ro1Nr5TUMx7loR/PLE1HpGHuCCmxqVPnmLB5uDTcPAHWCmEPV4hUZizsXzf4cIP9aYMHr
-        5ppK8fmXB015HahuNIfJTcCepGJC6Yx4iPH86KSDGr86xurQ3Z5zER7grYL6Hf4AmF510HDlcs51IX1b
-        LvJtLJPrt24reS0VbWkI++14gDeMAGwsjDkQTwdgHhQ2pKIvqzPkWugAUPriFDIMZxEP8MbLj9nV9qUD
-        wWAQ/fav0yu2A0BRUwp62H8efNagAxHmgHulnYbHL/uogemAQFV3OpLsgGOxloaz4s12gSXvB9qK1dOe
-        Im4HAMlX8Gq6lIazaugrQ998HxmWvFPEvLG/nLZide91Dte8wHZiXXIS1k9cRdvBbZpiVy+H9ehvYJPM
-        cDGB7QB5Fq4t3La48TTHXI10tiS35DIEej+Z0fwKO8xg8mdzg7kHQKda3lUz9+a+j6PmgUquOZBvS34m
-        WYgEagYvoOLm1J2gaB2wOkoZg1jkW09ekSzFYh6NXES3WkPDKNmBLT8ydeZFmEhiUftv1iceIvsBOUBy
-        jMXAxlLRnsZ9z0E8V1qHHvCNJEm2EXOQ3O0Y6Jk1U9uQ9mR+OyGga0o9Su1DknMgASzj15Clrxiv7UKC
-        oeM63yQKePLVUNtdKTmSGYYvkprOSx4Ta9J0SfNx/jFdyaHUiHe1MvsZvokUjxN9OktyArXjS8mxHCZm
-        VVc63ywcbF7UkBL9WC5I6YfJfUcmKmzkmArgYY/5z8Ol9NMMClaJqGAR8GyHCSf5zuVIycfpTsHCRUZn
-        UVsjllo8kvt5bhjMzC5vSQtVuJhSqf4Bvjm8ChZKPvkAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOBSURBVFhHtZdbTxNBFMf7AXzSTyH67qMPGKSgEREUWk1N
+        eDAhJiY8GMutwQiEEEUtqW1BI7YFghHUBuQSCYWAXGyBpkEuAoI3sFgJRFOkdJwznYVOO9vuUvwnvzS7
+        O+f8p7MzZ2YVUlXnyTpsdKk1pveqBvw7aXap1zGIsg736DMNtKVhics8nnPM5FJZzMNqf5hhbHBbEoNj
+        aRr5qvVkHzK7VHqdSx3gmkggFKvSQy6aVprqnFeOmpw507yk+wFyQU6aPraMY5dPmEfVPl6ihMA5ITe1
+        4Qt6+V/MBXBu0ZGA93SQwy4GeHDnBEwWXkA4z6duIvvsnZg0ewq4sSwqPbUNCZaLlNn+dWMKxZNrsQfV
+        9GVx4wWIV/gSNTrVVl7DSJxLdrSwMhmTzvEnqMimRFVvzuPhVnHzAFAniDlULV6Rsbjz0dzPQfKvBRa9
+        bq6pGJ9/edC014Hqx/KY3ATsSSomlM6ohxjPjy46qImrc7we3e29EOUB3gqo35EPgJk1Bw2XL+d8N9K3
+        5yPf5gq5fuu2ktdS2Z6BsN+uB3jDCMDGwpgDiXQA5kFxYzr6sjZLroUOAGUvziDDSA7xAG+8/Jhd7UA6
+        EAwG0W//Br1iOwCUNKehhwMXwWcdOhBlDrhXO2h44rKPGZgOCFT3ZCLRDjiW6mg4K95sF1j2fqCtWD3t
+        LeF2ABB9Ba9mymg4q8b+cvTN95Fh2TtNzJsGKmgrVvde53HNi2ynNkQnYcPkNbQT3KEp9vRyRI/+BrbI
+        DA8nsBMgzyK1jduWNp3lmCuR1pbiFl2GQN8nM1pYZYcZTP5sbTL3AOhU67sa5t789wnUMljFNQcKbanP
+        RAuRQO3QJVTakr4bFKsDVkcZYxCPQuvpq6KlOJxHo7nodltoGEU7sO1Hpq6CKBNRLEr/rYbkI2Q/IAdI
+        jnE4sLFUdmRw33MQz5W24Qd8I1FSbcQcJHU7BnrnzNQ2pH2Z65IC2ub049Q+JCkHEsAycR1Z+kvx2i4m
+        GDpv8E1igCdfLbXdk5wjmWEkl9R0XvK4WFNmdC0n+cd0OYdSI97Vyu3n+CZiPE72aS2pSdSOLznHcpiY
+        1d2ZfLNIsHlJY1rsY7kguR8m9x3ZqLiJYyqAhz3uP4+U3E8zKFi6sIJFwLMdJpzoO5ciOR+nuwULFxmt
+        RWmNWmqJSOrnuWEoW1PRmhGqcHGlUPwDqVm8Au9qRloAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
