--- a/Prints/MainForm.resx
+++ b/Prints/MainForm.resx
@@ -142,6 +142,28 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="tsbDuplicate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOySURBVFhHxZffSxRRFMcX6bmH/opYJ3wpnwIfbH9AYEEI
+        lQaBbFCBUtGDD7EUWVSYWFjmj2xJK3FdCyNNERUNV6Raf1IpGoQ/l9gixWKV2/3e2bvcmb13nK2khw8z
+        c+7MOd+598y5Zxx+vz/DDu5a5y53cM9xT6uz3hXKfOsJaV9dIW0TeNpwTm10zNuiFeJemQ8ZTEBOTs4O
+        Fd7HTqe7NbOBBlz3hjRiB9zrCWoBPCvzybEU4K3M3ulp0So8QWdcFsQOeBY+4EsWA0gFuJu03a5WbVLm
+        9E+AL/g0xwEpAtzNWdnuoBaVOfob4PPAE22vGCtlCaByO4Jz4FucCYMArJPVtDdO3SfR1SXGSgJ+LdoC
+        k3dJ+8xTUtx7TOqHxUjkhEEASxbJA5zhhX6ysbHBgszGPpG5BDifjX1kx+jaMmn+UM/u/b4eU4pALD4L
+        TAA+l62yHU7j8TgpHfCRwy/2SSkd9FEBdSQ838fEQkSJRARi8aVgAvCdm28q7MgltWPlpH78Nsl/uZ86
+        1WdABILMNswAFwAg4mxPvsE3QJ1gS4CqJSsyDROVSSe+rjwSTizB1fB5crLTK6UsfIG0TTeSMz1HyKU3
+        p5Oc6HAZfAPERGwHyqt5ECCZEBBv6evOS+bA528z5N3SkJS52DS7f+3Xqs7PH+z4cLwixT+Dlm0Hq9+S
+        QQjgUywKeD7dRO5FrjGqImWk6j3Qr822yPIwe+bRxJ0U/wCxHdhEZIOBCX0GRAEQ1D7zjFSP3iAPElRH
+        KDhKbGMrI5YCENuBXU02iIdEATwJ8cmNLA5SBsjIAoWdcwbIVDSSfI6jnAEam86AtikbDIgChCS8PnyR
+        FHUdJEWvKTiKUNu5voLkcwCzhuWUxUBstQBFEnIbP7djsxSAZkI2qErCdIODLZYgvSTkNo4dm3USKj5D
+        VRKK2BWknAF8higGskFVEnLSmQ1VDrBCpCrF5iQMz/canPJzOzaUdbP/ZCnGhsAaSNMNYhKe6j5Et9aj
+        pI5uTgAbFODXVjYcC17lGnwDbICW27GYhP1fOknN2C1SM3qTVjoddq2wXRkqMQQzw2IlOmZlQyImIUhn
+        2vHFiL7M0LcvR0y2HXMB5pbs8lAx7X4WE63WoqT9UtuaaPsmBhRRtmTgvzalHLTO2yFCD56VLcYCKQIA
+        VFp1yOkCX+Kbi0gFAKzTv/g1Q8LxNTcjXQIzUI46IStWKliRQaNr9+dUFMGvzTZULZRO1G/2Ky7+nrNz
+        /fccPSbu3cqfjj/jN5XQfJ5JXrGdAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="gstInputBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>332, 21</value>
   </metadata>
